# Tlaloc

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README  README.md
.github/workflows/: ci.yml
scripts/: build-arm32.sh  build-arm64.sh  build-native.sh
src/: tlaloc.h
src/glue/: CMakeLists.txt  glue.c
src/lens/: CMakeLists.txt  lens.c  lens.h  main.c
src/meld/: CMakeLists.txt  meld.c  meld.h  meld_archive.c  meld_archive.h  meld_dynlink.c  meld_dynlink.h  meld_input.c  meld_input.h  meld_layout.c  meld_layout.h  meld_output.c  meld_output.h  meld_reloc.c  meld_reloc.h  meld_section.c  meld_section.h  meld_symbol.c  meld_symbol.h  meld_synthetic.c  meld_synthetic.h
src/parasite/: CMakeLists.txt
src/pulse/: CMakeLists.txt  pulse.h
src/soul/: CMakeLists.txt  soul.h
src/surosam/: CMakeLists.txt
tests/: CMakeLists.txt  README
tests/lens/: arch-aarch64-bti.sh  arch-arm32-thumb.sh  common.inc  dynamic.sh  et_dyn.sh  et_exec.sh  et_rel.sh  phdrs.sh  pie.sh  reject_nonelf.sh  reject_truncated.sh  sections.sh  symbols.sh  tls.sh  visibility.sh
tests/meld/: archive.sh  common.inc  init-fini.sh  libver.map  pie.sh  relro.sh  static.sh  symbols.sh  versioning.sh
tests/meld/comprehensive/: archive_func.c  main.c  run_test.sh
